# CarDekho

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py  seed.py
backend/app/core/: config.py  database.py  redis.py  response.py  security.py
backend/app/domains/alerts/: models.py  router.py  service.py  tasks.py
backend/app/domains/cars/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/comparison/: schemas.py  service.py
backend/app/domains/discovery/: engine.py  reasoning.py  schemas.py  scorer.py
backend/app/domains/pricing/: calculator.py  schemas.py
backend/app/domains/reviews/: models.py  service.py
backend/app/domains/shortlist/: models.py  router.py  service.py
backend/app/domains/users/: auth.py  models.py  router.py
backend/app/graphql/: schema.py
backend/app/graphql/resolvers/: mappers.py
backend/app/graphql/types/: car.py  comparison.py  recommendation.py  review.py
backend/app/tasks/: celery_app.py  email_tasks.py
backend/cardekho_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/data/: cars.json
backend/tests/: test_recommendation_engine.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
frontend/src/: main.tsx  styles.css
infra/nginx/: default.conf
(+73 files in other folders)
