[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cardekho-backend"
version = "1.0.0"
description = "FastAPI + Strawberry backend for scalable car decision platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "strawberry-graphql[fastapi]==0.251.0",
  "sqlalchemy[asyncio]==2.0.36",
  "asyncpg==0.30.0",
  "alembic==1.14.0",
  "pydantic==2.10.3",
  "pydantic-settings==2.7.0",
  "redis==5.2.1",
  "python-jose[cryptography]==3.3.0",
  "email-validator==2.2.0",
  "passlib[bcrypt]==1.7.4",
  "python-multipart==0.0.20",
  "celery==5.4.0",
  "httpx==0.28.1",
  "orjson==3.10.12"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.25.0",
  "ruff==0.8.2",
  "mypy==1.13.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
